极客时间云原生训练营/homework/module8/8.2/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
      cert-manager.io/cluster-issuer: nginx-letsencrypt # 让 Cert-Manager 自动申请证书
  name: https-ingress
spec:  
  ingressClassName: nginx
  rules:
  - host: www.example.com
    http:
      paths:
      - backend:
          service:
            name: httpserver
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
   - hosts:
      - www.example.com
     secretName: nginx-cert
